@@ -388,12 +388,6 @@ class ZMProducts extends ZMService {
             $languageId = $session->getLanguageId();
         }
 
-        // custom fields
-        $customFields = '';
-        foreach (explode(',', zm_setting('sqlProductFields')) as $field) {
-            $customFields .= ', p.'.$field;
-        }
-
         $db = $this->getDB();
         $sql = "select p.products_id, p.products_status, pd.products_name, pd.products_description, p.products_model,
                     p.products_quantity, p.products_image, pd.products_url, p.products_price,
@@ -402,7 +396,7 @@ class ZMProducts extends ZMService {
                     p.product_is_call, p.product_is_free, p.products_qty_box_status, p.products_quantity_order_max,
                     p.products_quantity_order_min, p.products_quantity_mixed,
                     p.products_discount_type, p.products_discount_type_from, p.products_sort_order, p.products_price_sorter
-                 ".$customFields."
+                 ".$this->getCustomFieldsSQL(TABLE_PRODUCTS, 'p')."
                  from " . TABLE_PRODUCTS . " p, " . TABLE_PRODUCTS_DESCRIPTION . " pd
                  where p.products_status = '1'
                  and p.products_model = :model
@@ -436,15 +430,6 @@ class ZMProducts extends ZMService {
             $languageId = $session->getLanguageId();
         }
 
-        // custom fields
-        $customFields = '';
-        foreach (explode(',', zm_setting('sqlProductFields')) as $field) {
-            $field = trim($field);
-            if (!zm_is_empty($field)) {
-                $customFields .= ', p.'.$field;
-            }
-        }
-
         $db = $this->getDB();
         $sql = "select p.products_id, p.products_status, pd.products_name, pd.products_description, p.products_model,
                     p.products_quantity, p.products_image, pd.products_url, p.products_price,
@@ -453,7 +438,7 @@ class ZMProducts extends ZMService {
                     p.product_is_call, p.product_is_free, p.products_qty_box_status, p.products_quantity_order_max,
                     p.products_quantity_order_min, p.products_quantity_mixed,
                     p.products_discount_type, p.products_discount_type_from, p.products_sort_order, p.products_price_sorter
-                 ".$customFields."
+                 ".$this->getCustomFieldsSQL(TABLE_PRODUCTS, 'p')."
                  from " . TABLE_PRODUCTS . " p, " . TABLE_PRODUCTS_DESCRIPTION . " pd
                  where p.products_id = :productId
                  and pd.products_id = p.products_id
@@ -491,12 +476,6 @@ class ZMProducts extends ZMService {
             return array();
         }
 
-        // custom fields
-        $customFields = '';
-        foreach (explode(',', zm_setting('sqlProductFields')) as $field) {
-            $customFields .= ', p.'.$field;
-        }
-
         $db = $this->getDB();
         $sql = "select p.products_id, p.products_status, pd.products_name, pd.products_description, p.products_model,
                     p.products_quantity, p.products_image, pd.products_url, p.products_price,
@@ -505,7 +484,7 @@ class ZMProducts extends ZMService {
                     p.product_is_call, p.product_is_free, p.products_qty_box_status, p.products_quantity_order_max,
                     p.products_quantity_order_min, p.products_quantity_mixed,
                     p.products_discount_type, p.products_discount_type_from, p.products_sort_order, p.products_price_sorter
-                 ".$customFields."
+                 ".$this->getCustomFieldsSQL(TABLE_PRODUCTS, 'p')."
                  from " . TABLE_PRODUCTS . " p, " . TABLE_PRODUCTS_DESCRIPTION . " pd
                  where p.products_id in (:productIdList)
                  and pd.products_id = p.products_id
@@ -691,8 +670,7 @@ class ZMProducts extends ZMService {
         $product->features_ = $zm_features->getFeaturesForProductId($product->getId());
 
         // custom fields
-        foreach (explode(',', zm_setting('sqlProductFields')) as $field) {
-            $field = trim($field);
+        foreach ($this->getCustomFields(TABLE_PRODUCTS) as $field) {
             if (isset($fields[$field])) {
                 $product->set($field, $fields[$field]);
             }
