@@ -58,6 +58,9 @@ Release 0.8.7
 - fix bad method name in ZMTellAFriendController
 - add new setting 'sqlProductFields that allows to query custom product
   fields; data can be accessed using the generic get() method: read only ATM
+- change the new 'sqlProductFields' setting to something more generic; the
+  setting format is: 'sql.[table name].customFields', where [table name] is the
+  table name without the prefix
 
 Release 0.8.6.1
 - fix hardcoded tablename in ZMBanners; #1856664
